feat: 支持选择远程视频文件，编辑标题问题修复

--- a/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
@@ -101,7 +101,7 @@
         padding: 12px 24px;
         border-radius: 24px;
         box-sizing: border-box;
-        background-color: var(--primary-bg-color);
+        background-color: var(--main-bg-color);
         min-height: 36px;
         align-items: center;
 
