--- a/src/components/SelectCardModal/CardItem/index.module.less
+++ b/src/components/SelectCardModal/CardItem/index.module.less
@@ -3,10 +3,10 @@
   width: 100%;
   background: var(--card-item-bg);
   box-shadow: var(--box-shadow1);
-  padding: 16px 16px 0;
+  padding: 16px;
   border-radius: 8px;
   box-sizing: border-box;
-  //background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 80%), linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 80%);
+  // background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 80%), linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 80%);
   &:hover {
     background-color: var(--common-hover-bg);
     cursor: pointer;
