--- a/src/pages/QuickCard/index.module.less
+++ b/src/pages/QuickCard/index.module.less
@@ -1,36 +1,37 @@
 .quickCardContainer {
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: hidden;
   display: flex;
-  padding: 12px 24px 24px;
+  padding: 0 24px 24px;
   flex-direction: column;
   gap: 10px;
   position: relative;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   background-image:
     linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 80%),
     linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 80%);
 
-  .titleBar {
+  .editorContainer {
+    height: calc(100% - 32px);
+    overflow: auto;
     box-sizing: border-box;
-    height: 56px;
-    display: flex;
-    align-items: center;
+    border-bottom: 20px solid transparent;
+  }
 
-    .title {
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-
-    .windowControl {
-      margin-left: auto;
-    }
+  .editor {
+    padding: 20px 40px;
+    margin: 0 auto;
+    width: 100%;
+    max-width: min(100%, 800px);
+    box-sizing: border-box;
   }
 
   .tags {
     position: fixed;
     left: 24px;
     bottom: 24px;
+    flex-shrink: 0;
   }
 
   .buttons {
@@ -42,13 +43,6 @@
 }
 
 .loading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.error {
   display: flex;
   justify-content: center;
   align-items: center;
