--- a/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ChatSidebar/index.module.less
@@ -4,11 +4,8 @@
   height: 100%;
 
   .wrapContainer {
-    height: calc(100% - 8px);
+    height: 100%;
     background: var(--primary-bg-color);
-    margin: 0 8px 8px 0;
-    border-radius: 8px;
-    box-shadow: var(--shadow);
     box-sizing: border-box;
 
     .innerContainer {
@@ -18,7 +15,6 @@
 
       &.dark {
         background: #29292f;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
       }
 
       display: flex;
@@ -52,15 +48,6 @@
         position: relative;
         will-change: transform;
         -webkit-overflow-scrolling: touch;
-
-        &::-webkit-scrollbar {
-          width: 6px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(0, 0, 0, 0.2);
-          border-radius: 3px;
-        }
 
         .messagesList {
           display: flex;
