--- a/src/components/ContentSelector/index.module.less
+++ b/src/components/ContentSelector/index.module.less
@@ -67,6 +67,11 @@
     border: 1px solid var(--active-text-color);
   }
 
+  &.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+
   .title {
     font-size: 16px;
     font-weight: bold;
