--- a/src/components/WhiteBoard/components/RichText/index.module.less
+++ b/src/components/WhiteBoard/components/RichText/index.module.less
@@ -4,6 +4,7 @@
   position: relative;
   --block-distance: 10px;
   border-radius: 4px;
+  box-shadow: var(--shadow);
 
   .borderTop {
     position: absolute;
@@ -13,6 +14,7 @@
     top: 0;
     z-index: 2;
   }
+
   .editor {
     &::-webkit-scrollbar {
       display: none;
