--- a/src/pages/WhiteboardDetailView/index.module.less
+++ b/src/pages/WhiteboardDetailView/index.module.less
@@ -3,28 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.viewContainer {
-  flex: 1;
-  width: 100%;
-  display: flex;
-  overflow: hidden;
-}
-
-.gridContainer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px 40px 40px;
-  align-content: flex-start;
-  overflow-y: auto;
-  box-sizing: border-box;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  background-color: var(--primary-bg-color);
 }
 
 .titlebar {
@@ -50,4 +29,10 @@
   &:hover {
     background-color: var(--common-hover-bg);
   }
+}
+
+.whiteboardContainer {
+  flex: 1;
+  width: 100%;
+  overflow: hidden;
 }
