--- a/src/pages/CardDetailView/EditCard/index.module.less
+++ b/src/pages/CardDetailView/EditCard/index.module.less
@@ -9,7 +9,6 @@
   .time {
     margin-bottom: 24px;
     display: flex;
-    gap: 10px;
     opacity: 0.8;
     font-size: 0.9em;
     flex-shrink: 0;
@@ -18,6 +17,24 @@
     max-width: min(100%, 800px);
     padding: 20px;
     box-sizing: border-box;
+    justify-content: space-between;
+
+    .timeInfo {
+      flex: 1;
+      display: flex;
+      gap: 10px;
+    }
+
+    .moreActions {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      margin-left: auto;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 
   .editorContainer {
@@ -62,4 +79,8 @@
   position: absolute;
   bottom: 20px;
   right: 35px;
+}
+
+.icon {
+  font-size: 16px;
 }
