--- a/src/pages/DocumentView/index.module.less
+++ b/src/pages/DocumentView/index.module.less
@@ -31,6 +31,7 @@
   display: flex;
   align-items: center;
   -webkit-app-region: no-drag;
+
   &.showIcon {
     padding-left: 0;
   }
@@ -51,4 +52,13 @@
   width: 100%;
   flex: 1;
   overflow: hidden;
+}
+
+.loading,
+.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
