--- a/src/pages/ProjectView/index.module.less
+++ b/src/pages/ProjectView/index.module.less
@@ -55,3 +55,12 @@
   flex: 1;
   overflow: hidden;
 }
+
+.loading,
+.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
