--- a/src/components/Editor/extensions/comment/components/Comment/index.module.less
+++ b/src/components/Editor/extensions/comment/components/Comment/index.module.less
@@ -7,10 +7,10 @@
   background-color: rgba(239, 35, 60, 0.14);
   border-bottom: 2px solid rgb(239, 35, 60);
 
-  /* 鼠标悬停效果 */
-  &:hover {
-    background-color: rgba(239, 35, 60, 0.22);
-  }
+  // /* 鼠标悬停效果 */
+  // &:hover {
+  //   background-color: rgba(239, 35, 60, 0.22);
+  // }
 }
 
 .commentIndicator {
@@ -19,6 +19,7 @@
   margin-left: 4px;
   font-size: 12px;
   color: rgb(239, 35, 60);
+  // position: absolute;
 
   .commentCount {
     margin-left: 2px;
