feat: 窗口聚焦方法抽离，只监听一份，支持设置代码字体，预览卡片命令面板层级优化，预览 ESC 退出优化，其他体验样式优化

--- a/src/layouts/ContentLayout/components/RightSidebar/tabs/ArticleTab/ArticlesViewer/index.module.less
+++ b/src/layouts/ContentLayout/components/RightSidebar/tabs/ArticleTab/ArticlesViewer/index.module.less
@@ -8,6 +8,10 @@
   overflow: hidden;
 
   :global {
+    .ant-tabs-nav {
+      height: unset;
+    }
+
     .ant-tabs {
       width: 100%;
       height: 100%;
