--- a/src/main.less
+++ b/src/main.less
@@ -7,16 +7,14 @@ body {
 }
 
 body {
-  --font: "Merriweather", "新宋体", "宋体", "楷体-简";
-  --mono-font: "JetBrains Mono", "楷体", "楷体-简";
+  --font: sans-serif;
+  --mono-font: monospace;
   --font-size: 16px;
   --block-distance: 20px;
   --sidebar-bg: var(--primary-bg-color);
   --right-sidebar-bg: var(--primary-bg-color);
   --search-tips-bg: var(--primary-bg-color);
   --card-item-bg: var(--primary-bg-color);
-  --detail-bg-color: var(--primary-bg-color);
-  --header-bg-color: var(--primary-bg-color);
   --block-panel-bg: var(--primary-bg-color);
   font-family: var(--font);
   color: var(--text-normal);
