--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -81,8 +81,8 @@
 
   .languageSelect {
     position: absolute;
-    top: 10px;
-    left: 24px;
+    top: 0.625em;
+    left: 1em;
     z-index: 1;
   }
 
@@ -99,7 +99,7 @@
 
   .CodeMirrorContainer :global(.CodeMirror pre.CodeMirror-line),
   .CodeMirrorContainer :global(.CodeMirror pre.CodeMirror-line-like) {
-    padding: 0 12px;
+    padding: 0 0.75em;
   }
 
   :global(.CodeMirror-scroll, .CodeMirror-hscrollbar) {
