--- a/src/components/Editor/extensions/link/components/Link/index.module.less
+++ b/src/components/Editor/extensions/link/components/Link/index.module.less
@@ -7,7 +7,8 @@
   .icon {
     width: 1em;
     height: 1em;
-    vertical-align: -0.2em;
+    vertical-align: -0.1em;
+    margin-left: 0.25em;
   }
 }
 
@@ -43,7 +44,7 @@
   display: flex;
   height: 2.5em;
   align-items: center;
-  max-width: 18.75em;
+  max-width: 20em;
   gap: 0.75em;
   padding: 0 0.5em;
   border-radius: 0.5em;
