feat: 小问题修复

--- a/src/components/WhiteBoard/components/StatusBar/index.module.less
+++ b/src/components/WhiteBoard/components/StatusBar/index.module.less
@@ -16,6 +16,17 @@
   gap: 1em;
 }
 
+.zoomPopover {
+  min-width: 80px;
+  padding: 4px;
+}
+
+.zoomText {
+  min-width: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+
 .zoomItem {
   width: 6.25em;
   height: 2em;
@@ -25,6 +36,7 @@
   transition: all 0.2s;
   border-radius: 0.25em;
   box-sizing: border-box;
+  text-align: center;
 
   &.disabled {
     cursor: not-allowed;
