feat: 白板交互小优化

--- a/src/components/WhiteBoard/components/Toolbar/Geometry/index.module.less
+++ b/src/components/WhiteBoard/components/Toolbar/Geometry/index.module.less
@@ -6,19 +6,20 @@
   .list {
     display: flex;
     flex-wrap: wrap;
+    gap: 0.5em;
 
     .item {
-      width: 1.5em;
-      height: 1.5em;
+      width: 2em;
+      height: 2em;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
-      color: #999;
+      color: #aaa;
       border-radius: 0.25em;
 
       &:hover {
-        background-color: #f0f0f0;
+        background-color: #eef0f5;
       }
     }
   }
