--- a/src/layouts/ContentLayout/components/RightSidebar/tabs/ArticleTab/ArticlesViewer/index.module.less
+++ b/src/layouts/ContentLayout/components/RightSidebar/tabs/ArticleTab/ArticlesViewer/index.module.less
@@ -6,33 +6,21 @@
   box-sizing: border-box;
   padding: 16px;
   overflow: hidden;
+}
 
-  :global {
-    .ant-tabs-nav {
-      height: unset;
-    }
+.tabsContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-    .ant-tabs {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-
-      .ant-tabs-content-holder {
-        flex: 1;
-        overflow: auto;
-      }
-
-      .ant-tabs-content {
-        height: 100%;
-      }
-
-      .ant-tabs-tabpane {
-        height: 100%;
-      }
-    }
-  }
+.tabContent {
+  flex: 1;
+  overflow: auto;
+  margin-top: 12px;
+  height: calc(100% - 40px);
 }
 
 .empty {
