--- a/src/layouts/ContentLayout/components/RightSidebar/tabs/CardTab/CardsViewer/index.module.less
+++ b/src/layouts/ContentLayout/components/RightSidebar/tabs/CardTab/CardsViewer/index.module.less
@@ -1,32 +1,24 @@
 .container {
   height: 100%;
   overflow: hidden;
+  padding: 16px;
+  width: 100%;
+  box-sizing: border-box;
+}
 
-  :global {
-    .ant-tabs-nav {
-      height: unset;
-    }
+.tabsContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-    .ant-tabs {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .ant-tabs-content-holder {
-      overflow-y: auto;
-      flex: 1;
-    }
-
-    .ant-tabs-content {
-      height: 100%;
-    }
-
-    .ant-tabs-tabpane {
-      height: 100%;
-      overflow-y: hidden;
-    }
-  }
+.tabContent {
+  flex: 1;
+  overflow: auto;
+  margin-top: 12px;
+  height: calc(100% - 40px);
 }
 
 .empty {
