--- a/src/components/TabsIndicator/index.module.less
+++ b/src/components/TabsIndicator/index.module.less
@@ -29,7 +29,7 @@
   font-size: 14px;
   display: flex;
   align-items: center;
-  gap: 6px;
+  gap: 8px;
 
   &:hover {
     color: var(--active-text-color);
@@ -44,7 +44,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
   opacity: 0.6;
   width: 16px;
   height: 16px;
@@ -104,4 +103,8 @@
   bottom: 0;
   height: 2px;
   background-color: var(--active-text-color);
+}
+
+.icon {
+  font-size: 0.9em;
 }
