--- a/src/components/ContentSelector/index.module.less
+++ b/src/components/ContentSelector/index.module.less
@@ -72,10 +72,13 @@
     cursor: not-allowed;
   }
 
+  .titleContainer {
+    margin-bottom: 12px;
+  }
+
   .title {
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
