--- a/src/layouts/ContentLayout/components/SmallComponentSidebar/index.module.less
+++ b/src/layouts/ContentLayout/components/SmallComponentSidebar/index.module.less
@@ -6,5 +6,13 @@
     height: 100%;
     padding: 16px;
     box-sizing: border-box;
+    .list {
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
   }
 }
