--- a/src/layouts/ContentLayout/components/SmallComponentSidebar/index.module.less
+++ b/src/layouts/ContentLayout/components/SmallComponentSidebar/index.module.less
@@ -6,6 +6,7 @@
     height: 100%;
     padding: 16px;
     box-sizing: border-box;
+    background-color: var(--primary-bg-color);
     .list {
       width: 100%;
       height: 100%;
