--- a/src/components/Editor/extensions/drop-common.less
+++ b/src/components/Editor/extensions/drop-common.less
@@ -7,10 +7,10 @@
     &::before {
       content: "";
       position: absolute;
-      top: -10px;
+      top: -0.625em;
       left: 0;
       right: 0;
-      height: 2px;
+      height: 0.125em;
       background-color: var(--active-text-color);
     }
   }
@@ -18,10 +18,10 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: 6px;
+      bottom: 0.375em;
       left: 0;
       right: 0;
-      height: 2px;
+      height: 0.125em;
       background-color: var(--active-text-color);
     }
   }
