--- a/src/components/Editor/extensions/link/components/Link/index.module.less
+++ b/src/components/Editor/extensions/link/components/Link/index.module.less
@@ -3,6 +3,9 @@
   cursor: pointer;
   border-bottom: 1px dashed gray;
   color: gray;
+  &:hover {
+    color: gray;
+  }
 
   .icon {
     width: 1em;
