--- a/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
+++ b/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
@@ -1,10 +1,41 @@
 .whiteboardContainer {
   position: relative;
   width: 100%;
-  background-color: #f5f5f5;
   border-radius: 0.5em;
   margin: 0.625em 0;
   overflow: hidden;
+  border: 1px solid var(--line-color);
+}
+
+.whiteboardWrapper {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.resizeHandle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  cursor: row-resize;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.resizeIndicator {
+  width: 2em;
+  height: 0.25em;
+  background-color: var(--line-color);
+  border-radius: 1em;
+
+  // .resizeHandle:hover & {
+  //   background-color: rgba(0, 0, 0, 0.5);
+  // }
 }
 
 .fullscreenButton {
@@ -12,7 +43,9 @@
   top: 0.625em;
   right: 0.625em;
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.8);
+  // background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(38, 38, 38, 0.6);
+  color: white;
   border-radius: 0.25em;
   padding: 0.25em;
   cursor: pointer;
@@ -20,10 +53,6 @@
   align-items: center;
   justify-content: center;
   transition: all 0.2s;
-
-  &:hover {
-    background-color: rgba(255, 255, 255, 1);
-  }
 }
 
 .fullscreenOverlay {
@@ -42,7 +71,8 @@
 .fullscreenContent {
   width: 90%;
   height: 90%;
-  background-color: #f5f5f5;
+  // background-color: #f5f5f5;
+  background: var(--primary-bg-color);
   border-radius: 0.5em;
   position: relative;
 }
@@ -52,7 +82,9 @@
   top: 0.625em;
   right: 0.625em;
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.8);
+  // background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(38, 38, 38, 0.6);
+  color: white;
   border-radius: 0.25em;
   padding: 0.25em;
   cursor: pointer;
@@ -61,7 +93,7 @@
   justify-content: center;
   transition: all 0.2s;
 
-  &:hover {
-    background-color: rgba(255, 255, 255, 1);
-  }
+  // &:hover {
+  //   background-color: rgba(255, 255, 255, 1);
+  // }
 }
