--- a/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
+++ b/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
@@ -1,3 +1,8 @@
+.container {
+  position: relative;
+  @import "@/components/Editor/extensions/drop-common.less";
+  @import "@/components/Editor/extensions/drag-common.less";
+}
 .whiteboardContainer {
   position: relative;
   width: 100%;
