feat: 问题卡片布局，小组件样式统一，表格删除列问题修复

--- a/src/editor-extensions/question-card/components/QuestionCard/index.module.less
+++ b/src/editor-extensions/question-card/components/QuestionCard/index.module.less
@@ -22,6 +22,17 @@
   align-items: center;
   justify-content: space-between;
 
+  .titleContainer {
+    flex: 1;
+    display: flex;
+    align-items: center;
+  }
+
+  .titleLabel {
+    flex-shrink: 0;
+    width: fit-content;
+  }
+
   .title {
     margin: 0;
     font-size: 16px;
