--- a/src/layouts/ContentLayout/components/SmallComponentSidebar/components/DailyReview/index.module.less
+++ b/src/layouts/ContentLayout/components/SmallComponentSidebar/components/DailyReview/index.module.less
@@ -25,14 +25,8 @@
 
     .cardItem {
       cursor: pointer;
-      padding: 10px;
-      transition: background-color 0.3s;
+      padding: 8px 12px;
       border-radius: 4px;
-      margin-bottom: 4px;
-
-      &:hover {
-        background-color: var(--ant-color-primary-bg);
-      }
     }
   }
 
@@ -63,4 +57,11 @@
       right: 24px;
     }
   }
+}
+
+.editor {
+  width: 300px;
+  height: 300px;
+  overflow: auto;
+  padding: 24px;
 }
