--- a/src/layouts/ContentLayout/components/SmallComponentSidebar/components/LatestUpdate/index.module.less
+++ b/src/layouts/ContentLayout/components/SmallComponentSidebar/components/LatestUpdate/index.module.less
@@ -38,14 +38,14 @@
 
     .itemListItem {
       cursor: pointer;
-      padding: 10px;
-      transition: background-color 0.3s;
+      padding: 8px 12px;
       border-radius: 4px;
-      margin-bottom: 4px;
-
-      &:hover {
-        background-color: var(--ant-color-primary-bg);
-      }
     }
   }
+}
+
+.editor {
+  width: 300px;
+  height: 300px;
+  overflow: auto;
 }
