--- a/src/components/AnswerCard/index.module.less
+++ b/src/components/AnswerCard/index.module.less
@@ -1,11 +1,23 @@
 .answerContent {
-  height: 144px;
   box-sizing: border-box;
-  overflow: hidden;
+  max-height: 200px;
+  overflow-y: hidden;
 }
 
 .btn {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+
+.moreIcon {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
 }
