--- a/src/layouts/ContentLayout/components/SmallComponentSidebar/components/ToClearCards/index.module.less
+++ b/src/layouts/ContentLayout/components/SmallComponentSidebar/components/ToClearCards/index.module.less
@@ -25,10 +25,6 @@
     padding: 8px 12px;
     border-radius: 4px;
     transition: all 0.2s;
-
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.05);
-    }
   }
 
   .cardItemContent {
@@ -65,4 +61,10 @@
     position: fixed;
     z-index: 1000;
   }
+}
+
+.editor {
+  width: 300px;
+  height: 300px;
+  overflow: auto;
 }
