feat: 高亮选择 hovering toolbar 修复

--- a/src/components/Editor/extensions/paragraph/components/HighlightText/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/HighlightText/index.module.less
@@ -1,5 +1,3 @@
-@import "@/components/Editor/extensions/hovering-item-common.less";
-
 .textContainer {
   width: 3.5em;
   height: 2.5em;
@@ -25,5 +23,9 @@
     fill: currentColor;
     width: 1em;
     height: 1em;
+  }
+
+  &.active {
+    background: rgb(203 213 224 / 0.4);
   }
 }
