feat: 删除项目和知识库时，删除所有的文档

--- a/src/pages/DocumentsView/DocumentList/index.module.less
+++ b/src/pages/DocumentsView/DocumentList/index.module.less
@@ -8,3 +8,11 @@
   overflow-y: auto;
   align-content: flex-start;
 }
+
+.empty {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
