--- a/src/pages/ProjectsView/ProjectList/index.module.less
+++ b/src/pages/ProjectsView/ProjectList/index.module.less
@@ -4,3 +4,10 @@
   // gap: 20px;
   width: 100%;
 }
+
+.empty {
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
