--- a/src/pages/SingleMarkdownEditor/index.module.less
+++ b/src/pages/SingleMarkdownEditor/index.module.less
@@ -16,20 +16,39 @@
   width: 100%;
   overflow-y: auto;
   box-sizing: border-box;
+  display: flex;
+  gap: 40px;
+  padding: 0 40px;
+  border: 40px solid transparent;
+  border-left: none;
+  border-right: none;
 }
 
 .sourceEditor,
 .editor {
-  width: 100%;
+  flex: 1;
   box-sizing: border-box;
   max-width: min(100%, 720px);
-  padding: 40px;
   margin: 0 auto;
-  overflow: auto;
   position: relative;
+  padding: 0 40px;
 
   &.hidden {
     display: none;
+  }
+}
+
+.outlineContainer {
+  width: fit-content;
+  flex-shrink: 0;
+  overflow-y: auto;
+  max-height: 100vh;
+  position: sticky;
+  top: 0;
+  .outline {
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
