--- a/src/pages/DocumentView/index.module.less
+++ b/src/pages/DocumentView/index.module.less
@@ -7,7 +7,13 @@
     flex-shrink: 0;
     width: 300px;
     height: 100%;
+    transition: width 0.3s;
+    overflow: hidden;
     background: var(--second-sidevar-background);
+
+    &.hide {
+      width: 0px;
+    }
   }
 
   .edit {
@@ -16,6 +22,18 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+  }
+
+  .openIndicator {
+    height: 60px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 40px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-app-region: no-drag;
   }
 }
 
@@ -32,7 +50,7 @@
   align-items: center;
   -webkit-app-region: no-drag;
 
-  &.showIcon {
+  &.showUnfold {
     padding-left: 0;
   }
 }
