--- a/src/pages/ProjectView/ProjectList/index.module.less
+++ b/src/pages/ProjectView/ProjectList/index.module.less
@@ -19,6 +19,9 @@
       display: flex;
       align-items: center;
       gap: 12px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .icons {
