feat: 白板重构，支持多白板

--- a/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
+++ b/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
@@ -102,3 +102,10 @@
   //   background-color: rgba(255, 255, 255, 1);
   // }
 }
+
+.loading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
