--- a/src/pages/ArticleListView/index.module.less
+++ b/src/pages/ArticleListView/index.module.less
@@ -64,3 +64,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
