--- a/src/pages/CardListView/CreateCard/index.module.less
+++ b/src/pages/CardListView/CreateCard/index.module.less
@@ -10,6 +10,10 @@
     min-height: 250px;
     border-radius: 6px;
     overflow: hidden;
+
+    .editor {
+      padding: 20px;
+    }
   }
 
   .buttons {
@@ -62,10 +66,9 @@
   }
 
   &.lightTheme {
-    background-color: rgba(248, 249, 251, 0.7);
+    background-color: #fff;
     backdrop-filter: blur(20px);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.3);
   }
 
   &.darkTheme {
