--- a/src/pages/WhiteBoardView/index.module.less
+++ b/src/pages/WhiteBoardView/index.module.less
@@ -51,3 +51,11 @@
     background-color: var(--common-hover-bg);
   }
 }
+
+.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
