--- a/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
+++ b/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
@@ -3,6 +3,7 @@
   @import "@/components/Editor/extensions/drop-common.less";
   @import "@/components/Editor/extensions/drag-common.less";
 }
+
 .whiteboardContainer {
   position: relative;
   width: 100%;
@@ -37,10 +38,6 @@
   height: 0.25em;
   background-color: var(--line-color);
   border-radius: 1em;
-
-  // .resizeHandle:hover & {
-  //   background-color: rgba(0, 0, 0, 0.5);
-  // }
 }
 
 .fullscreenButton {
@@ -48,7 +45,6 @@
   top: 0.625em;
   right: 0.625em;
   z-index: 10;
-  // background-color: rgba(255, 255, 255, 0.8);
   background-color: rgba(38, 38, 38, 0.6);
   color: white;
   border-radius: 0.25em;
@@ -97,13 +93,16 @@
   align-items: center;
   justify-content: center;
   transition: all 0.2s;
-
-  // &:hover {
-  //   background-color: rgba(255, 255, 255, 1);
-  // }
 }
 
 .loading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.empty {
   width: 100%;
   display: flex;
   align-items: center;
