--- a/src/components/Table/plugins/DatePlugin/components/Editor/index.module.less
+++ b/src/components/Table/plugins/DatePlugin/components/Editor/index.module.less
@@ -1,11 +1,27 @@
 .editor {
   width: 100%;
   height: 100%;
-  padding: 8px 16px;
   box-sizing: border-box;
-  border: none;
-  outline: none;
-  background-color: #fff;
-  font-family: inherit;
-  font-size: inherit;
+
+  :global {
+    .ant-picker {
+      width: 100%;
+      height: 100%;
+      border: none;
+      outline: none;
+      box-shadow: none;
+      background-color: transparent;
+    }
+
+    .ant-picker-input {
+      height: 100%;
+    }
+
+    .ant-picker-input > input {
+      height: 100%;
+      font-family: inherit;
+      font-size: inherit;
+      padding: 8px 16px;
+    }
+  }
 }
