fix: 切换日期时显示问题

--- a/src/pages/DailyNoteView/EditDailyNote/index.module.less
+++ b/src/pages/DailyNoteView/EditDailyNote/index.module.less
@@ -20,7 +20,7 @@
   .content {
     overflow-y: auto;
     width: 100%;
-    height: calc(100vh - var(--title-bar-height) - 40px);
+    height: calc(100% - 40px);
     box-sizing: border-box;
     border-bottom: 20px solid transparent;
     .editor {
