feat: 支持行内图片扩展

--- a/src/components/Editor/extensions/image/components/Image/index.module.less
+++ b/src/components/Editor/extensions/image/components/Image/index.module.less
@@ -197,3 +197,9 @@
   box-sizing: border-box;
   outline: 1px solid transparent;
 }
+
+.imageUploadContainer {
+  width: 100%;
+  margin: 16px 0;
+  position: relative;
+}
