fix: 评论批注问题修复，行内图片缩放后未保存问题

--- a/src/components/Editor/extensions/comment/components/Comment/index.module.less
+++ b/src/components/Editor/extensions/comment/components/Comment/index.module.less
@@ -19,10 +19,9 @@
   margin-left: 4px;
   font-size: 12px;
   color: rgb(239, 35, 60);
-  // position: absolute;
 
   .commentCount {
-    margin-left: 2px;
+    margin: 02px;
   }
 }
 
