--- a/src/pages/SingleArticleEditor/index.module.less
+++ b/src/pages/SingleArticleEditor/index.module.less
@@ -31,29 +31,33 @@
   width: 100%;
   overflow-y: auto;
   box-sizing: border-box;
-  display: flex;
-  padding: 0 40px;
   border: 20px solid transparent;
-  border-left: none;
-  border-right: none;
+}
+
+.contentEditor {
+  width: 100%;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .editor {
   flex: 1;
-  padding: 40px;
   max-width: 720px;
-  margin: 0 auto;
+  padding: 0 40px;
 }
 
 .outlineContainer {
   width: fit-content;
   flex-shrink: 0;
   overflow-y: auto;
-  max-height: 100vh;
+  max-height: calc(100vh - 300px);
   position: sticky;
   top: 0;
 
   .outline {
+    border: none;
     &::-webkit-scrollbar {
       display: none;
     }
