--- a/src/pages/SingleMarkdownEditor/index.module.less
+++ b/src/pages/SingleMarkdownEditor/index.module.less
@@ -16,33 +16,45 @@
   width: 100%;
   overflow-y: auto;
   box-sizing: border-box;
-  display: flex;
-  gap: 40px;
-  padding: 0 40px;
   border: 40px solid transparent;
-  border-left: none;
-  border-right: none;
 }
 
 .sourceEditor,
-.editor {
+.contentEditor {
   flex: 1;
   box-sizing: border-box;
-  max-width: min(100%, 720px);
-  margin: 0 auto;
   position: relative;
-  padding: 0 40px;
-
   &.hidden {
     display: none;
   }
+}
+
+.sourceEditor {
+  max-width: min(100%, 720px);
+  padding: 0 40px;
+  margin: 0 auto;
+}
+
+.contentEditor {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+
+.editor {
+  flex: 1;
+  max-width: 720px;
+  padding: 0 40px;
 }
 
 .outlineContainer {
   width: fit-content;
   flex-shrink: 0;
   overflow-y: auto;
-  max-height: 100vh;
+  // 80px -> 上下边框
+  // 48px -> titlebar
+  // 32px -> 状态栏
+  max-height: calc(100vh - 80px - 48px - 32px);
   position: sticky;
   top: 0;
   .outline {
@@ -79,6 +91,7 @@
   padding: 0 16px;
   font-size: 12px;
   color: #666;
+  box-sizing: border-box;
 
   // 适应深色模式
   [data-theme="dark"] & {
