--- a/src/components/Editor/extensions/header/components/Header/index.module.less
+++ b/src/components/Editor/extensions/header/components/Header/index.module.less
@@ -62,7 +62,8 @@
     position: relative;
     line-height: 1.5;
     font-weight: bold;
-    margin-bottom: 32px;
+    margin-top: 0.75em;
+    margin-bottom: 1em;
     width: fit-content;
     display: flex;
     align-items: center;
