--- a/src/layouts/ContentLayout/components/ChatSidebar/MessageItem/index.module.less
+++ b/src/layouts/ContentLayout/components/ChatSidebar/MessageItem/index.module.less
@@ -56,4 +56,45 @@
   :not(pre) code {
     color: var(--code-normal);
   }
+
+  p {
+    margin: 16px 0;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 1em 0;
+    font-weight: 600;
+  }
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.25em;
+  }
+  h4 {
+    font-size: 1em;
+  }
+
+  ul,
+  ol {
+    margin: 20px 0;
+    padding-inline-start: 32px;
+  }
+  ul {
+    list-style: disc;
+  }
+  ol {
+    list-style: decimal;
+  }
+  li {
+    margin: 10px 0;
+  }
 }
