--- a/src/pages/CardDetailView/index.module.less
+++ b/src/pages/CardDetailView/index.module.less
@@ -61,7 +61,6 @@
   border-radius: 4px;
 
   &:hover {
-    color: var(--primary-color, #1890ff);
-    background-color: rgba(24, 144, 255, 0.1);
+    background-color: var(--common-hover-bg);
   }
 }
