feat: 优化几何图形背景颜色设置，卡片颜色设置，图片描述，各属性设置器黑暗模式适配，内容保存间隔调整

--- a/src/components/WhiteBoard/components/AttributeSetter/ArrowSetter/index.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/ArrowSetter/index.module.less
@@ -9,15 +9,16 @@
   width: fit-content;
   box-sizing: border-box;
   gap: 0.75em;
-  grid-template-columns: repeat(3, 1.5em);
+  grid-template-columns: repeat(3, 2em);
   grid-template-rows: auto;
 
   .item {
     padding: 0.25em;
-    width: 1.5em;
-    height: 1.5em;
+    width: 2em;
+    height: 2em;
     cursor: pointer;
     border-radius: 0.25em;
+    box-sizing: content-box;
 
     &.active {
       color: rgb(102, 152, 255);
