--- a/src/components/WhiteBoard/components/AttributeSetter/GeometrySetter/setters/setters.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/GeometrySetter/setters/setters.module.less
@@ -18,14 +18,6 @@
   cursor: pointer;
   transition: all 0.2s;
   color: #999;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.06);
-  }
-
-  &.active {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
 }
 
 .colorSelect {
@@ -46,6 +38,7 @@
   flex-direction: row;
   gap: 0.5em;
   padding: 0.5em;
+  color: #000;
 }
 
 .modernSketchOptions {
