--- a/src/components/WhiteBoard/components/ImageElement/index.module.less
+++ b/src/components/WhiteBoard/components/ImageElement/index.module.less
@@ -4,49 +4,33 @@
   display: flex;
   align-items: center;
   overflow: visible;
+  &.left {
+    justify-content: flex-start;
+  }
+  &.center {
+    justify-content: center;
+  }
+  &.right {
+    justify-content: flex-end;
+  }
 }
 
 .descriptionText {
   cursor: text;
   width: fit-content;
+  padding-left: 8px;
   min-width: 8px;
   height: 100%;
-  overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
   word-break: break-word;
   cursor: text;
-  max-height: 100%;
   line-height: 1.4;
   display: flex;
   align-items: center;
-
-  &.left {
-    text-align: left;
-  }
-
-  &.center {
-    text-align: center;
-  }
-
-  &.right {
-    text-align: right;
-  }
 }
 
 .placeholder {
   opacity: 0.6;
   font-weight: normal;
-}
-
-.left {
-  text-align: left;
-}
-
-.center {
-  text-align: center;
-}
-
-.right {
-  text-align: right;
 }
