fix: 大模型设置及对话功能完善与修复

--- a/src/pages/Settings/LLMProviderSetting/components/ConfigList.module.less
+++ b/src/pages/Settings/LLMProviderSetting/components/ConfigList.module.less
@@ -31,8 +31,7 @@
 
 .configItem {
   &.selected {
-    background-color: #e6f4ff;
-    border-color: #91caff;
+    background-color: var(--common-hover-bg);
 
     &:hover {
       background-color: #e6f4ff;
@@ -51,7 +50,6 @@
 }
 
 .baseUrl {
-  font-family: monospace;
   color: #1890ff;
 }
 
