feat: 完善对话列表，多模态对话

--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 @import "./themes/dark.less";
 @import "./themes/light.less";
 
