--- a/src/components/Editor/components/PreviewWithEditor/index.module.less
+++ b/src/components/Editor/components/PreviewWithEditor/index.module.less
@@ -62,6 +62,7 @@
     .preview {
       min-height: 2.5em;
       box-sizing: border-box;
+      white-space: normal;
 
       &.extend {
         padding: 0.3125em 0;
