feat: pdf 列表详情优化

--- a/src/main.less
+++ b/src/main.less
@@ -12,6 +12,12 @@
   -webkit-app-region: no-drag;
 }
 
+.scrollbar-hide {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 html,
 body {
   overscroll-behavior: none;
